--- a/styles/dark.css
+++ b/styles/dark.css
@@ -4,26 +4,58 @@
   переключая тему
 */
 .page.theme_dark {
-  background-image: url(../images/cover-image-dark.png);
-  --menu-color: #ff0070;
-  --background-color: #00183f;
-  --accent-color-opacity40: rgba(255, 0, 112, 0.4);
-  --header-title-color: #db00ff;
-  --footer-title-color: #db00ff;
+  /* сохраните этот селектор в приведённом виде.
+    Так стили написанные ниже будут иметь больший вес,
+    чем стили в медиазапросе предпочтений пользователя
+  */
+  --main-font: "IBM Plex mono";
+  --bg-color: #000028;
+  --text-color: #f1b2ce;
   --accent-color: #ff0070;
-  --header-color: #00183f;
-  --section-title: #ff0070;
-  --article-text-color: #f1b2ce;
+  --section-title-color: #ff0070;
+  --title-color: #000028;
+  --header-color: #db00ff;
+  --bg-image: url(../images/cover-image-dark.png);
 }
 
-.theme_dark .header__rec {
+@media (prefers-color-scheme: dark) {
+  :root {
+    --main-font: "IBM Plex mono";
+    --bg-color: #000028;
+    --text-color: #f1b2ce;
+    --section-title-color: #ff0070;
+    --accent-color: #ff0070;
+    --title-color: #000028;
+    --header-color: #db00ff;
+    --bg-image: url(../images/cover-image-dark.png);
+  }
+  .header_item::before {
+    display: block;
+    visibility: visible;
+  }
+
+  .header_item::after {
+    display: block;
+    visibility: visible;
+  }
+
+  .header__theme-menu-button:hover {
+    outline: 1px solid rgba(255, 0, 112, 0.4);
+    padding: 0 13px;
+  }
+}
+
+.page.theme_dark .header_item::after {
   display: block;
+  visibility: visible;
 }
 
-.theme_dark .header__theme-menu-button_active {
-  border: 1px solid var(--menu-color);
+.page.theme_dark .header_item::before {
+  display: block;
+  visibility: visible;
 }
 
-.theme_dark .header__theme-menu-button:hover {
-  --accent-color-opacity40: rgba(255, 0, 112, 0.4);
+.page.theme_dark .header__theme-menu-button:hover {
+  outline: 1px solid rgba(255, 0, 112, 0.4);
+  padding: 0 13px;
 }
