--- a/styles/style.css
+++ b/styles/style.css
@@ -1,5 +1,5 @@
-/* Основные стили проекта. Это стили для темы, которую вы верстаете первой. */
 .page {
+    /* сохраните в разметке и стилях класс page. На его основе работает скрипт. */
     background-image: var(--bg-image);
     background-color: var(--bg-color);
     background-repeat: no-repeat;
@@ -28,7 +28,7 @@
     color: var(--title-color);
   }
   
-  .li_title_decor {
+  .content__subheading {
     font-weight: 400;
   }
   
@@ -56,23 +56,25 @@
     background-color: transparent;
     cursor: pointer;
     text-transform: lowercase;
+    inline-size: 66px;
+    padding: 0 13px;
   }
   
   .header__theme-menu-button_active {
     padding: 0px 13px;
     outline: 1px solid var(--section-title-color);
+    pointer-events: none;
   }
   
   .header {
     display: grid;
-    grid-template-rows: 0 1fr min-content 1fr;
-    min-block-size: 100vh;
+    grid-template-rows: 1fr min-content 1fr;
+    min-block-size: 668px;
   }
   
   .header__theme-menu {
     justify-self: flex-end;
     align-self: center;
-    margin-block-start: -6px;
   }
   
   .header__theme-menu-list {
@@ -86,12 +88,12 @@
     text-align: center;
   }
   
-  .header_title {
+  .footer_title {
     align-self: center;
     justify-self: flex-start;
   }
   
-  .header_title:last-child {
+  .footer_title:last-child {
     text-align: center;
   }
   
@@ -142,10 +144,13 @@
   .header_item::before {
     content: "REC";
     position: absolute;
+    right: auto;
+    left: -60px;
     font-family: var(--main-font, monospace);
     font-size: 18px;
     color: var(--accent-color);
     inset-inline-end: 28px;
+    text-transform: uppercase;
   }
   
   .header_item::after {
@@ -155,7 +160,7 @@
     block-size: 9px;
     background-color: var(--accent-color);
     border-radius: 50%;
-    filter: drop-shadow(0px 0px 4px #ff0070);
+    box-shadow: 0 0 4px 2px var(--#ff0070);
     inset-block-start: 8px;
     inset-inline-end: 9px;
   }
@@ -171,7 +176,7 @@
   
   .content_picture {
     inline-size: 100%;
-    object-fit: contain;
+    object-fit: cover;
     object-position: center;
   }
   
@@ -179,11 +184,11 @@
     display: grid;
     margin-block-start: 10px;
     gap: 6px;
-    margin-block-end: -4px;
   }
   
   .footer {
-    min-block-size: 100vh;
+    min-block-size: 668px;
+    height: 100vh;
     display: flex;
     align-items: center;
     justify-content: center;
@@ -196,18 +201,17 @@
   }
   
   .header__theme-menu-button:hover {
-    outline: 1px solid rgba(255, 0, 112, 0.4);
-    padding: 0 13px;
+    outline: none;
   }
   
   .header__theme-menu-button:focus-visible {
     outline: none;
     border-bottom: 1px solid var(--section-title-color);
-    inline-size: 66px;
   }
   
   a:hover {
     border-bottom: 1px solid var(--text-color);
+    outline: none;
   }
   
   a:focus-visible {
@@ -247,7 +251,7 @@
   }
   
   @media (min-width: 768px) {
-    .content-section-decorated:nth-child(1) {
+    .section-why {
       display: grid;
       grid-template-columns: 1fr 2fr;
       gap: 20px;
@@ -273,7 +277,7 @@
   }
   
   @media (min-width: 768px) {
-    .content-section-decorated:nth-child(2) {
+    .section-causes {
       display: grid;
       grid-template-rows: min-content 1fr;
       gap: 20px;
@@ -281,7 +285,7 @@
   }
   
   @media (min-width: 768px) {
-    .content-section-decorated:nth-child(3) {
+    .section-advices {
       display: grid;
       grid-template-columns: 1fr 2fr;
       gap: 20px;
@@ -289,7 +293,7 @@
   }
   
   @media (min-width: 768px) {
-    .content-section-decorated:nth-child(4) {
+    .section-advices .list {
       display: grid;
       gap: 10px;
     }
@@ -309,12 +313,6 @@
     }
   }
   
-  @media (min-width: 768px) {
-    .content_picture {
-      block-size: 100%;
-      object-fit: cover;
-    }
-  }
   
   @media (min-width: 768px) {
     .picture:nth-child(1) {
