--- a/styles/style.css
+++ b/styles/style.css
@@ -70,6 +70,7 @@
     display: grid;
     grid-template-rows: 1fr min-content 1fr;
     min-block-size: 668px;
+    height: 100vh;
   }
   
   .header__theme-menu {
@@ -137,32 +138,31 @@
   }
   
   .header_item {
-    justify-self: flex-end;
-    position: relative;
+    position: absolute;
+    top: 20px;
+    right: 10px;
   }
   
   .header_item::before {
-    content: "REC";
-    position: absolute;
-    right: auto;
-    left: -60px;
-    font-family: var(--main-font, monospace);
-    font-size: 18px;
-    color: var(--accent-color);
-    inset-inline-end: 28px;
-    text-transform: uppercase;
+  content: "REC";
+  position: absolute;
+  top: 0;
+  right: 38px;
+  color: var(--accent-color);
+  font-size: 18px;
+  line-height: 138.889%;
   }
   
   .header_item::after {
-    content: "";
-    position: absolute;
-    inline-size: 9px;
-    block-size: 9px;
-    background-color: var(--accent-color);
-    border-radius: 50%;
-    box-shadow: 0 0 4px 2px var(--#ff0070);
-    inset-block-start: 8px;
-    inset-inline-end: 9px;
+  content: "";
+  position: absolute;
+  top: 8px;
+  right: 19px;
+  width: 9px;
+  height: 9px;
+  border-radius: 50%;
+  box-shadow: 0 0 4px 3px var(--accent-color);
+  background-color: var(--accent-color);
   }
   
   .content_list {
@@ -202,8 +202,13 @@
   
   .header__theme-menu-button:hover {
     outline: none;
+    border: 1px solid var(--link-border-hover);
   }
-  
+
+  .header__theme-menu-button:focus {
+    outline: none;
+  }
+
   .header__theme-menu-button:focus-visible {
     outline: none;
     border-bottom: 1px solid var(--section-title-color);
@@ -213,13 +218,17 @@
     border-bottom: 1px solid var(--text-color);
     outline: none;
   }
+
+  a:focus {
+   outline: none;
+  }
   
   a:focus-visible {
     outline: 1px solid var(--text-color);
   }
   
   @media (min-width: 768px) {
-    .content-section {
+    .section-why {
       padding: 20px 20px;
     }
   }
@@ -251,7 +260,7 @@
   }
   
   @media (min-width: 768px) {
-    .section-why {
+    .section-advices {
       display: grid;
       grid-template-columns: 1fr 2fr;
       gap: 20px;
@@ -293,7 +302,7 @@
   }
   
   @media (min-width: 768px) {
-    .section-advices .list {
+    .section-subtitle {
       display: grid;
       gap: 10px;
     }
@@ -315,7 +324,7 @@
   
   
   @media (min-width: 768px) {
-    .picture:nth-child(1) {
+    .section-why {
       grid-row: 1 / 2;
       grid-column: 1 / 3;
     }
@@ -349,7 +358,7 @@
   }
   
   @media (min-width: 1024px) {
-    .content-section-decorated:nth-child(1) {
+    .section-why {
       gap: 10px;
     }
   }
@@ -363,7 +372,7 @@
   }
   
   @media (min-width: 1024px) {
-    .content-section-decorated:nth-child(3) {
+    .section-advices {
       gap: 10px;
     }
   }
