--- a/styles/dark.css
+++ b/styles/dark.css
@@ -4,48 +4,17 @@
   переключая тему
 */
 .page.theme_dark {
-  /* сохраните этот селектор в приведённом виде.
-    Так стили написанные ниже будут иметь больший вес,
-    чем стили в медиазапросе предпочтений пользователя
-  */
-  --main-font: "IBM Plex mono";
-  --bg-color: #000028;
-  --text-color: #f1b2ce;
-  --accent-color: #ff0070;
-  --section-title-color: #ff0070;
-  --title-color: #000028;
-  --header-color: #db00ff;
-  --bg-image: url(../images/cover-image-dark.png);
-}
-
-@media (prefers-color-scheme: dark) {
-  :root {
-    --main-font: "IBM Plex mono";
-    --bg-color: #000028;
-    --text-color: #f1b2ce;
-    --section-title-color: #ff0070;
-    --accent-color: #ff0070;
-    --title-color: #000028;
-    --header-color: #db00ff;
-    --bg-image: url(../images/cover-image-dark.png);
-  }
-  .header_item::before {
-    display: block;
-    visibility: visible;
-  }
-
-  .header_item::after {
-    display: block;
-    visibility: visible;
-  }
-}
-
-.page.theme_dark .header_item::after {
-  display: block;
-  visibility: visible;
-}
-
-.page.theme_dark .header_item::before {
-  display: block;
-  visibility: visible;
+  --main-text-color: #f1b2ce;
+  --title-color: #db00ff;
+  --title-shadow: #ff0070;
+  --hover-color: 1px solid rgba(255, 0, 112, 0.4);
+  --background-color: #000028;
+  --background-image: url(../images/cover-image-dark.png);
+  --article-title-color: var(--background-color);
+  --section-title-color: var(--title-shadow);
+  --border-color: var(--main-text-color);
+  --corners-color: var(--title-shadow);
+  --title-decor: var(--title-shadow);
+  --link-shadow: var(--title-shadow);
+  --rec-color: var(--title-shadow);
 }
