--- a/styles/light.css
+++ b/styles/light.css
@@ -4,48 +4,21 @@
   переключая тему
 */
   .page.theme_light {
-    /* сохраните этот селектор в приведённом виде.
-      Так стили написанные ниже будут иметь больший вес,
-      чем стили в медиазапросе предпочтений пользователя
-    */
-    --main-font: "IBM Plex mono";
-    --bg-color: #fff1f7;
-    --text-color: #353430;
-    --accent-color: #ff8dcb;
-    --section-title-color: #353430;
-    --title-color: #353430;
-    --header-color: #ffc2e6;
-    --bg-image: url(../images/cover-image-light.png);
+    --main-text-color: #353430;
+    --title-color: #ffc2e6;
+    --title-shadow: #ff0070;
+    --title-decor: #ff8dcb;
+    --hover-color: 1px solid rgba(50, 49, 45, 0.4);
+    --background-color: #fff1f7;
+    --background-image: url(../images/cover-image-light.png);
+    --article-title-color: var(--main-text-color);
+    --section-title-color: var(--main-text-color);
+    --border-color: var(--title-shadow);
+    --corners-color: var(--main-text-color);
+    --link-shadow: var(--title-color);
+    --rec-color: var(--background-color);
   }
   
-  @media (prefers-color-scheme: light) {
-    :root {
-      --main-font: "IBM Plex mono";
-      --bg-color: #fff1f7;
-      --text-color: #353430;
-      --accent-color: #ff8dcb;
-      --section-title-color: #353430;
-      --title-color: #353430;
-      --header-color: #ffc2e6;
-      --bg-image: url(../images/cover-image-light.png);
-    }
-    .header_item::before {
-      display: none;
-      visibility: hidden;
-    }
-  
-    .header_item::after {
-      display: none;
-      visibility: hidden;
-    }
-  }
-  
-  .page.theme_light .header_item::after {
+  .page.theme_light .header__rec {
     display: none;
-    visibility: hidden;
-  }
-  
-  .page.theme_light .header_item::before {
-    display: none;
-    visibility: hidden;
   }
