--- a/styles/style.css
+++ b/styles/style.css
@@ -1,6 +1,5 @@
 .page {
   --transition-duration: 0.25s;
-
   background: var(--background-image) no-repeat top center,
     var(--background-color);
   background-size: cover;
@@ -16,11 +15,7 @@
   height: 100vh;
 }
 
-@media (width < 768px) and (width >= 375px) {
-  .header {
-    padding: 0 10px;
-  }
-}
+
 
 .header__item {
   position: absolute;
@@ -28,19 +23,6 @@
   text-transform: uppercase;
   top: 21px;
   right: 49px;
-}
-
-@media (width < 768px) and (width >= 375px) {
-  .header__item {
-    top: 11px;
-    right: 39px;
-  }
-}
-@media (width < 768px) and (width >= 375px) {
-  .decorated-zone::before {
-    left: 10px;
-    bottom: 17px;
-  }
 }
 
 .decorated-zone::after {
@@ -52,13 +34,6 @@
   border-top: 1px solid var(--corners-color);
   right: 20px;
   top: 20px;
-}
-
-@media (width < 768px) and (width >= 375px) {
-  .decorated-zone::after {
-    right: 10px;
-    top: 10px;
-  }
 }
 
 .header__item::after {
@@ -101,12 +76,6 @@ a {
   }
 }
 
-@media (width < 768px) and (width >= 375px) {
-  .header__theme-menu-list {
-    gap: 11px;
-  }
-}
-
 .header__theme-menu-button {
   font-size: 18px;
   font-weight: 400;
@@ -135,17 +104,6 @@ a {
   border: 1px solid;
 }
 
-@media (width < 1024px) and (width >= 768px) {
-  .header__theme-menu {
-    padding-top: 190px;
-  }
-}
-
-@media (width < 768px) and (width >= 375px) {
-  .header__theme-menu {
-    padding-top: 75px;
-  }
-}
 
 .header__title {
   font-size: clamp(7.5rem, 0.5625rem + 14.4531vw, 9.8125rem);
@@ -162,39 +120,7 @@ a {
   gap: 76px;
 }
 
-@media (width < 1024px) and (width >= 768px) {
-  .header__title-container {
-    padding: 150px 0 183px;
-    gap: 133px;
-  }
-}
 
-@media (width < 768px) and (width >= 375px) {
-  .header__title-container {
-    padding: 70px 0 74px;
-    gap: 57px;
-  }
-}
-
-@media (width < 1024px) and (width >= 375px) {
-  .header__title {
-    text-shadow: 4px 4px 0px var(--title-decor);
-  }
-}
-
-@media (width < 1024px) and (width >= 768px) {
-  .header__title {
-    margin-left: -3%;
-  }
-}
-
-@media (width < 768px) and (width >= 375px) {
-  .header__title {
-    font-size: clamp(7.25rem, 7.0115rem + 1.0178vw, 7.5rem);
-    margin-left: 0;
-    line-height: 82.5%;
-  }
-}
 
 .header__subtitle {
   color: var(--article-title-color);
@@ -203,11 +129,7 @@ a {
   width: 50%;
 }
 
-@media (width < 425px) {
-  .header__subtitle {
-    width: 100%;
-  }
-}
+
 
 .main {
   padding: 0 20px;
@@ -218,46 +140,25 @@ a {
   gap: 80px;
 }
 
-@media (width < 768px) and (width >= 375px) {
-  .main {
-    padding: 0 10px;
-    margin: 34px 0;
-    gap: 50px;
-  }
-}
-
-.section-advices, .section-why, .section-causes, .section-pictures {
+.section-advices,
+.section-why,
+.section-causes,
+.section-pictures {
   line-height: 130%;
+  display: grid;
+  gap: 20px 0;
 }
 
-.section__title, .section__title_list {
-  margin-bottom: 20px;
+.section__title {
   font-size: 18px;
   font-weight: 700;
   color: var(--section-title-color);
-  gap: 25px;
-}
-
-.section__title_list {
-margin-bottom: 20px;
 }
 
 .dark-title {
   color: var(--article-title-color);
 }
 
-@media (width < 1024px) and (width >= 768px) {
-  .section__title .section__title_list {
-    width: 35%;
-  }
-}
-
-@media (width < 768px) and (width >= 375px) {
-  .section__title .section__title_list {
-    width: 100%;
-    margin-bottom: 20px;
-  }
-}
 
 .section__article-list {
   display: flex;
@@ -312,31 +213,12 @@ margin-bottom: 20px;
 }
 
 .section-advices .section__title,
-.section-causes .section__title,
-.section-advices .section__title_list,
-.section-causes .section__title_list {
+.section-causes .section__title {
   flex: 0 0 auto;
   width: 33%;
 }
 
-@media (width < 1024px) and (width >= 768px) {
-  .section-advices .section__title,
-  .section-causes .section__title,
-  .section-advices .section__title_list,
-  .section-advices .section__title_list {
-    width: 32%;
-  }
-}
 
-@media (width < 768px) and (width >= 375px) {
-  .section-advices .section__title,
-  .section-causes .section__title,
-  .section-advices .section__title_list,
-  .section-advices .section__title_list {
-    width: 100%;
-    margin-bottom: 20px;
-  }
-}
 
 .section-advices .section__article-list,
 .section-causes .section__article-list {
@@ -346,40 +228,23 @@ margin-bottom: 20px;
   gap: 20px;
 }
 
-@media (width < 1024px) and (width >= 768px) {
-  .section-advices .section__article-list,
-  .section-causes .section__article-list {
-    width: 65%;
-  }
-}
-
-@media (width < 768px) and (width >= 375px) {
-  .section-advices .section__article-list,
-  .section-causes .section__article-list {
-    width: 100%;
-  }
-}
-
 .section-why .section__title {
   width: 30%;
 }
 
-@media (width < 768px) and (width >= 375px) {
-  .section-why .section__title {
-    width: 100%;
-  }
+.footer {
+  position: relative;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  block-size: max(100vh, 668px);
 }
 
-@media (width >= 1024px) {
-  .section-why .section__article-list {
-    justify-content: space-between;
-  }
-}
-
-@media (width < 1024px) and (width >= 375px) {
-  .section__article-list {
-    gap: 20px;
-  }
+.footer__title {
+  font-size: clamp(7.5rem, 0.5625rem + 14.4531vw, 9.8125rem);
+  font-weight: 700;
+  color: var(--title-color);
+  text-shadow: 2px 2px 0px var(--title-shadow);
 }
 
 .section-why .section__article-item {
@@ -387,13 +252,6 @@ margin-bottom: 20px;
   width: 32%;
 }
 
-@media (width < 1024px) and (width >= 375px) {
-  .section-why .section__article-item {
-    flex: 1 0 auto;
-    width: 100%;
-    gap: 20px;
-  }
-}
 
 .section-pictures {
   display: grid;
@@ -405,7 +263,95 @@ margin-bottom: 20px;
   margin: 0;
 }
 
-@media (width >= 768px) {
+
+
+.footer__title {
+  font-size: clamp(7.25rem, 7.0115rem + 1.0178vw, 7.5rem);
+
+}
+
+.header__item {
+  top: 11px;
+  right: 39px;
+
+}
+
+.decorated-zone::before {
+  left: 10px;
+  bottom: 17px;
+}
+
+.decorated-zone::after {
+  right: 10px;
+  top: 10px;
+
+}
+
+
+.section-advices .section__title,
+.section-causes .section__title,
+.section__title {
+  width: 100%;
+  margin-bottom: 20px;
+
+}
+
+
+
+.section-advices .section__article-list,
+.section-causes .section__article-list,
+.section-why .section__title {
+  width: 100%;
+
+}
+
+.main {
+  padding: 0 10px;
+  margin: 34px 0;
+  gap: 50px;
+
+}
+
+.header__title {
+  font-size: clamp(7.25rem, 7.0115rem + 1.0178vw, 7.5rem);
+  margin-left: 0;
+  line-height: 82.5%;
+
+}
+
+.header__title-container {
+  padding: 70px 0 74px;
+  gap: 57px;
+
+}
+
+.header__theme-menu {
+  padding-top: 75px;
+}
+
+.header__theme-menu-list {
+  gap: 11px;
+
+}
+
+@media (width < 768px) {
+  .section-pictures .content_picture {
+    width: 100%;
+    height: auto;
+  }
+
+  .section-pictures {
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
+  }
+
+  .section-pictures .section__image-container {
+    width: 100px;
+  }
+}
+
+@media (width >=768px) {
   .section-pictures .content_picture {
     -o-object-fit: cover;
     object-fit: cover;
@@ -424,70 +370,82 @@ margin-bottom: 20px;
   .section-pictures .content_picturee:nth-of-type(3) {
     grid-row: span 2;
   }
-}
 
-@media (width < 768px) {
-  .section-pictures .content_picture {
-    width: 100%;
-    height: auto;
-  }
-
-  .section-pictures .section__image-container {
-    width: 100px;
-  }
-}
-
-@media (width >= 768px) {
   .section-pictures {
     grid-template-columns: repeat(3, 1fr);
     gap: 20px 19px;
   }
 }
 
-@media (width < 768px) {
-  .section-pictures {
-    display: flex;
-    flex-direction: column;
-    gap: 10px;
+@media (width >=1024px) {
+  .section-why .section__article-list {
+    justify-content: space-between;
+  }
+  
+}
+
+
+
+@media (width < 1024px) and (width >=768px) {
+
+  .section-advices .section__title,
+  .section-causes .section__title {
+    width: 32%;
+  }
+
+  .section-advices .section__article-list,
+  .section-causes .section__article-list {
+    width: 65%;
+  }
+
+  .section__title {
+    width: 35%;
+  }
+
+  .header__title {
+    margin-left: -3%;
+  }
+
+  .header__title-container {
+    padding: 150px 0 183px;
+    gap: 133px;
+  }
+  
+
+  .header__theme-menu {
+    padding-top: 190px;
   }
 }
 
-.footer {
-  position: relative;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  block-size: max(100vh, 668px);
+@media (width < 768px) and (width >=375px) {
+  .header {
+    padding: 0 10px;
+  }
+
 }
 
-.footer__title {
-  font-size: clamp(7.5rem, 0.5625rem + 14.4531vw, 9.8125rem);
-  font-weight: 700;
-  color: var(--title-color);
-  text-shadow: 2px 2px 0px var(--title-shadow);
-}
+@media (width < 1024px) and (width >=375px) {
+  .header__title {
+    text-shadow: 4px 4px 0px var(--title-decor);
+  }
 
-@media (width < 1024px) and (width >= 375px) {
+  .section__article-list {
+    gap: 20px;
+  }
+
+  .section-why,
+  .section__article-item {
+    flex: 1 0 auto;
+    width: 100%;
+  }
+
   .footer__title {
     text-shadow: 2px 2px 0px var(--title-decor);
   }
 }
 
-@media (width < 768px) and (width >= 375px) {
-  .footer__title {
-    font-size: clamp(7.25rem, 7.0115rem + 1.0178vw, 7.5rem);
-  }
-}
-
-@media (width < 1024px) and (width >= 768px) {
-  .footer {
-    padding: 434px 20px;
-  }
-}
-
-@media (width < 768px) and (width >= 375px) {
-  .footer {
-    margin-top: 40px;
-    padding: 262px 10px;
+@media (width < 425px) {
+  .header__subtitle {
+    width: 100%;
   }
 }
